Mobile testing framework using Cucumber